# vouched

./: Cargo.toml  LICENSE-MIT  README.md  deny.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
crates/vouched/: Cargo.toml
crates/vouched-core/: Cargo.toml
crates/vouched-core/src/: error.rs  lib.rs  str_inner.rs
crates/vouched-derive/: Cargo.toml
crates/vouched-derive/src/: lib.rs
crates/vouched-derive/src/vouched/: analyze.rs  cast.rs  impls.rs  mod.rs  model.rs  parse.rs  types.rs
crates/vouched-derive/src/vouched/codegen/: errors.rs  markers.rs  mod.rs
crates/vouched/examples/: error.rs  numeric_range_and_cast.rs  numeric_range_and_impls.rs  string_constraints.rs
crates/vouched/src/: lib.rs
crates/vouched/tests/: compile_fail.rs  dependency_rename.rs  readme_minimal.rs  vouched_tests.rs
crates/vouched/tests/fixtures/dependency-rename/: Cargo.toml
crates/vouched/tests/fixtures/dependency-rename/src/: lib.rs
crates/vouched/tests/ui/vouched/: cast_empty_list.rs  cast_empty_list.stderr  cast_infallible.rs  cast_infallible.stderr  cast_non_integer.rs  cast_non_integer.stderr  cast_same_type.rs  cast_same_type.stderr  cast_unsupported_type.rs  cast_unsupported_type.stderr  duplicate_error_name.rs  duplicate_error_name.stderr  duplicate_impls.rs  duplicate_impls.stderr  duplicate_validation_markers.rs  duplicate_validation_markers.stderr  error_config_invalid.rs  error_config_invalid.stderr  error_equals.rs  error_equals.stderr  error_visibility_leak.rs  error_visibility_leak.stderr  impls_empty.rs  impls_empty.stderr  impls_try_from_borrowed_str_borrowed_inner.rs  impls_try_from_borrowed_str_borrowed_inner.stderr  impls_try_from_borrowed_str_custom_inner.rs  impls_try_from_borrowed_str_custom_inner.stderr  impls_try_from_borrowed_str_duplicate.rs  impls_try_from_borrowed_str_duplicate.stderr  impls_try_from_borrowed_str_missing_string_validation.rs  impls_try_from_borrowed_str_missing_string_validation.stderr  impls_try_from_borrowed_str_mixed_sources.rs  impls_try_from_borrowed_str_mixed_sources.stderr  impls_try_from_borrowed_str_range.rs  impls_try_from_borrowed_str_range.stderr  impls_try_from_borrowed_str_unsupported_ref.rs  impls_try_from_borrowed_str_unsupported_ref.stderr  impls_try_from_duplicate.rs  impls_try_from_duplicate.stderr  (+32 more)
