[workspace]
members = [
    "crates/vouched",
    "crates/vouched-core",
    "crates/vouched-derive",
]
resolver = "3"

[workspace.package]
edition = "2024"
keywords = [
    "derive",
    "newtype",
    "proc-macro",
    "validation",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yuly3/vouched"
rust-version = "1.86"
version = "0.2.0"

[workspace.dependencies]
proc-macro-crate = "3.5"
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = { version = "2.0", features = [
    "full",
] }
trybuild = "1.0"

valuable = { version = "0.1", default-features = false, features = [
    "alloc",
] }
valuable-serde = "0.1"

vouched-core = { path = "crates/vouched-core", version = "0.2.0" }
vouched-derive = { path = "crates/vouched-derive", version = "0.2.0" }

[workspace.lints.clippy]
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
assigning_clones = "deny"
bool_to_int_with_if = "deny"
branches_sharing_code = "deny"
equatable_if_let = "deny"
expect_used = "deny"
filter_map_next = "deny"
imprecise_flops = "deny"
lossy_float_literal = "deny"
match_wildcard_for_single_variants = "deny"
needless_continue = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
option_option = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
ref_option = "deny"
rest_pat_in_fully_bound_structs = "deny"
str_to_string = "deny"
suboptimal_flops = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnested_or_patterns = "deny"
unused_self = "deny"
unwrap_used = "deny"
use_self = "deny"
verbose_file_reads = "deny"
