[package]
description = "Proc macros for vouched."
documentation = "https://docs.rs/vouched-derive"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "vouched-derive"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
